topbar, nav, type, settings

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <section class="top-bar-section">
         <!-- Right Nav Section -->
-        <ul class="right">
+        <ul class="nav-items">
         	<li><a href="#">Home</a></li>
         	<li><a href="#">About</a></li>
         	<li><a href="#">Map</a></li>
@@ -54,42 +54,45 @@
 	<!-- ============== -->
 
 	<footer id="site-footer">
-		<div class="footer-column">
-			<h5>ANY MEAL</h5>
-			<p>Sapiente intelligentsia nihil authentic quinoa. Aliqua banh mi Pinterest, hella ethical tofu scenester. Biodiesel ugh labore disrupt eiusmod fap.</p>
-		</div>
+		<div class="inner">
+			<div class="footer-column">
+				<h5>ANY MEAL</h5>
+				<p><em>Sapiente intelligentsia nihil authentic quinoa. Aliqua banh mi Pinterest, hella ethical tofu scenester. Biodiesel ugh labore disrupt eiusmod fap.</em></p>
+			</div>
 
-		<div class="footer-column">
-			<h5>Social</h5>
-			<ul>
-				<li><a href="#">Twitter</a></li>
-				<li><a href="#">Facebook</a></li>
-				<li><a href="#">Pinterest</a></li>
-				<li><a href="#">Youtube</a></li>
-			</ul>
-		</div>
+			<div class="footer-column">
+				<h5>Social</h5>
+				<ul>
+					<li><a href="#">Twitter</a></li>
+					<li><a href="#">Facebook</a></li>
+					<li><a href="#">Pinterest</a></li>
+					<li><a href="#">Youtube</a></li>
+				</ul>
+			</div>
 
-		<div class="footer-column">
-			<h5>Year</h5>
-			<ul>
-				<li>2011</li>
-				<li>2012</li>
-				<li>2013</li>
-			</ul>
-		</div>
+			<div class="footer-column">
+				<h5>Year</h5>
+				<ul>
+					<li><a href="#">2010</a></li>
+					<li><a href="#">2011</a></li>
+					<li><a href="#">2012</a></li>
+					<li><a href="#">2013</a></li>
+				</ul>
+			</div>
 
-		<div class="footer-column">
-			<h5>Links</h5>
-			<ul>
-				<li><a href="#">Colin Hughes</a></li>
-				<li><a href="#">Warby Parker</a></li>
-				<li><a href="#">Square Space</a></li>
-			</ul>
-		</div>
+			<div class="footer-column">
+				<h5>Links</h5>
+				<ul>
+					<li><a href="#">Colin Hughes</a></li>
+					<li><a href="#">Warby Parker</a></li>
+					<li><a href="#">Square Space</a></li>
+				</ul>
+			</div>
 
-		<div class="footnote">
-			<a href="#">ANYMEAL</a>
-			<span class="detail">All work © Collin Hughes 2013</span>
+			<div class="footnote">
+				<a href="#"><h4>AnyMeal</h4></a>
+				<span class="detail">All work © Collin Hughes 2013</span>
+			</div>
 		</div>
 	</footer>
 
