--- a/pages/video-test.html
+++ b/pages/video-test.html
@@ -9,7 +9,7 @@
   <title>ANYMEAL</title>
 
   <!-- Le Style  -->
-  <link rel="stylesheet" href="../stylesheets/app.css" />
+  <!-- <link rel="stylesheet" href="../stylesheets/app.css" /> -->
   <link rel="stylesheet" href="../stylesheets/bigvideo.css">
   
   <!-- Modernizr -->
@@ -51,7 +51,7 @@
 		<div class="content-wrap">
 			
 			<div class="featured-entry">
-				<!-- <img src="../images/content/hero-placeholder.jpg" alt=""> -->
+				
 				<div class="banner">
 					<div class="inner">
 						<div class="meta">
@@ -169,7 +169,7 @@
   <!-- Javascripts -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="../js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
-<!-- 
+
   <script src="../javascripts/foundation/foundation.js"></script>
   <script src="../javascripts/foundation/foundation.topbar.js"></script>
   <script src="../javascripts/foundation/foundation.dropdown.js"></script>
@@ -178,7 +178,7 @@
   </script>
 
 
- -->
+
   <!-- Video -->
   <script src="../javascripts/vendor/jquery-ui-1.8.22.custom.min.js"></script>
   <script src="../javascripts/vendor/jquery.imagesloaded.min.js"></script>
